2007-03-21  Neil J. Patel  <njpatel@gmail.com>

	* Bar now automatically resizes when it is too big for screen


2007-03-21  Neil Jagdish Patel  <njpatel@gmail.com>

	* Better auto-hide animation.

2007-03-21  Neil Jagdish Patel  <njpatel@gmail.com>

	* Additional launcher->window matching code, should now work for most
	  apps.

2007-03-21  Varun Ratnakar  

	* Support for international fonts in title 

2007-03-21  Neil J. Patel  <njpatel@gmail.com>

	* Heavily debugged auto-hide. Should be a bit better now.

2007-03-20  Neil J. Patel  <njpatel@gmail.com>

	* Beryl Thumbnailer support

2007-03-09  Neil Jagdish Patel  <njpatel@gmail.com>

	* Has support for adding menu items through D-Bus. 

2007-03-07  Neil Jagdish Patel   <njpatel@gmail.com>

	* Listens to theme change signals and updates the bar as required.

2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Auto-hide now supports D&D

2007-03-07  Neil J. Patel  <njpatel@gmail.com>

	* Cleaned up auto-hide somewhat. Needs more testing

2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Merged an excellant patch by James Willcox (snorp_AT_snorp_DOT_net)
	  that makes the hover-bouncing algorithm much better
	

2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Cleaned up positioning code in awn-window.c
	* Fixed memory leak in awn-x.c
	* Fixed starup errors (GDK_IS_DRAWABLE)
	* Fixed separator positon errorsi


2007-03-07  Christian Kirbach  <christian.kirbach@googlemail.com>

	reviewed by: Neil J. Patel

	* Patch fixed 80+ compiler warnings.
	* njpatel fixed the rest, now about 2-3 warnings when compiling.
	
2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Updated TODO
 
2007-02-25  Neil Jagdish Patel  <njpatel@gmail.com>

	Added autohide support

	* src/Makefile.am:
	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-gconf.h:
	* src/awn-hotspot.c: (awn_hotspot_class_init), (awn_hotspot_init),
	(awn_hotspot_new), (awn_hotspot_destroy),
	(_on_alpha_screen_changed), (render), (render_pixmap),